# controllers/contacts.js
@@ -2,6 +2,7 @@ const mongodb = require("../data/database");
 const ObjectId = require("mongodb").ObjectId;
 
 const getAll = async (req, res) => {
+  //#swagger.tags=["Contacts"]
   const result = await mongodb.getDatabase().db().collection("contacts").find();
   result.toArray().then((contacts) => {
     res.setHeader("Content-Type", "application/json");
@@ -10,6 +11,7 @@ const getAll = async (req, res) => {
 };
 
 const getSingle = async (req, res) => {
+  //#swagger.tags=["Contacts"]
   const contactId = new ObjectId(req.params.id);
   const result = await mongodb.getDatabase().db().collection("contacts").find({ _id: contactId });
   result.toArray().then((contacts) => {
@@ -19,6 +21,7 @@ const getSingle = async (req, res) => {
 };
 
 const createContact = async (req, res) => {
+  //#swagger.tags=["Contacts"]
   const contact = {
     email: req.body.email,
     firstName: req.body.firstName,
@@ -35,6 +38,7 @@ const createContact = async (req, res) => {
 };
 
 const updateContact = async (req, res) => {
+  //#swagger.tags=["Contacts"]
   const contactId = new ObjectId(req.params.id);
   const contact = {
     email: req.body.email,
@@ -56,6 +60,7 @@ const updateContact = async (req, res) => {
 };
 
 const deleteContact = async (req, res) => {
+  //#swagger.tags=["Contacts"]
   const contactId = new ObjectId(req.params.id);
   const response = await mongodb
     .getDatabase()
